# nl2uricore

./: .gitignore  CHANGELOG.md  README.md  goal.yaml  pyproject.toml
src/nl2uricontrol/: __init__.py  cli.py  generator.py
src/nl2uricore/: __init__.py  cli.py  generator.py
src/nl2uricore.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_generator.py
